# beigebox-security

./: .bandit  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .webui_secret_key  AI_SECURITY_GAPS.md  BACKEND_INTEGRATION_GUIDE.md  BEIGEBOX_IS_NOT.md  BRAINSTORM_SECURITY_SAAS.md  CODEBASE_SWEEP_MEDIUM.md  CODEBASE_SWEEP_THOROUGH.md  COMMERCIAL_LICENSE.md  CONTEXT.md  DELIVERABLES_INDEX.md  DEPLOYMENT_SECURITY_CHECKLIST.md  DISTRIBUTION.md  DISTRIBUTION_SETUP_SUMMARY.md  DRIFT_AUDIT.md  Dockerfile  GARLICPRESS_USAGE_CASE_STUDY.md  HANDOFF.md  HN_POSTS_FAVORITES.md  HN_POSTS_FULL.txt  INSTALLATION_INDEX.md  KNOWN_VULNERABILITIES.md  LICENSE  LICENSE.md  MACOS_CHANGES_SUMMARY.md  MACOS_ISSUES_AND_FIXES.md  MACOS_QUICK_REFERENCE.md  MACOS_SETUP_GUIDE.md  MACOS_VALIDATION_REPORT.md  MODELS_LOCKED.md  MODEL_COMPARISON.md  MODEL_ROLES.md  P1_IMPLEMENTATION_SUMMARY.md  README.md  (+32 more)
.github/: RELEASE_TEMPLATE.md
2600/: .upload-manifest.json  CHANGELOG.md  CODEBASE-AUDIT.md  CONFIGURATION-GUIDE.md  DEPLOYMENT-GUIDE.md  MEDIUM-LOW-FIXES.md  MOBILE-AND-SECURITY-COMPLETE.md  README.md  RECENT-UPDATES-REVIEW.md  RUNTIME-CONFIG-FIX-SUMMARY.md  SESSION-SUMMARY.md  STEP2-BACKEND-RETRY-SUMMARY.md  STEP4-ENSEMBLE-UI-SUMMARY.md  agentic-tool-prompting-beigebox.md  agentshellaccess.md  agentshellaccessopt2.md  autoresearch-beigebox.md  beigebox-feature-audit.md  busybox-operator-audit.md  cdp-browser-automation-beigebox.md  code-quality-audit-2026-03-16.md  context-optimization-discovery-framework.md  contextideas.md  cost-tracking-design.md  flight-recorder-design.md  genericity-extensibility-standards.md  hermes-agent-research.md  loggingsuggestions.md  model-resource-visibility.md  multi-backend-design.md  multi_user_roadmap.md  no-backends-available-diagnosis.md  output-normalizer-wasm.md  possibleupdatestohttp.md  request-pipeline-complete.md  session-final-sweep.md  session-system-context-genparams.md  session-v0.8.0.md  session-v1.0-harness.md  session-v1.0-voice-config-harness.md  (+5 more)
agents/: operator.py
amf/: ADVERSARIAL_ANALYSIS_FIXES.md  AMF_RING_ARCHITECTURE.md  INDEX.md  PHASE_3_STATUS.md  SESSION_SUMMARY.md
beigebox/: SECURITY.md  __init__.py  __main__.py  aliases.py  amf_mesh.py  app.py  app_state.py  auth.py  bench.py  cache.py  capture.py  cli.py  config.py  config_migration.py  connections.py  constants.py  costs.py  flight_recorder.py  guardrails.py  hooks.py  log_events.py  logging.py  main.py  mcp_server.py  metrics.py  middleware.py  orchestrator.py  orientation.md  payload_log.py  proxy.py  replay.py  request_normalizer.py  response_normalizer.py  semantic_map.py  skill_loader.py  state.py  summarizer.py  system_context.py  tool_call_extractors.py  trajectory.py  (+3 more)
beigebox_security/: __init__.py  api.py  config.py  main.py
d0cs/: MEMORY-INTEGRITY-IMPLEMENTATION.md  MEMORY-POISONING-SUMMARY.md  PHASE3_HARDENING_SUMMARY.md  SECURITY_BYPASS_GUIDE.md  THREAT-MEMORY-POISONING.md  agents.md  api-reference.md  architecture.md  authentication.md  cli.md  configuration.md  deployment.md  routing.md  security.md
deploy/: README.md
docker/: CONFIGURATION.md  CONFIG_SETUP.sh  DRIFT_FIX_SUMMARY.md  Dockerfile  Dockerfile.claude  FILES_REFERENCE.md  FIRST_RUN.sh  README.md  SETUP_PROPOSAL.md  VALIDATION_REPORT.md  beigebox.yaml  claude.sh  compose-switch.sh  config.docker.yaml  config.example.yaml  config.yaml  docker-compose.example.yaml  docker-compose.yaml  env.example  launch.sh  runSmokeTests.sh  smoke.sh  sync-to-shipping.sh  test-compose-switch.sh  up.sh
docs/: CHROMADB_UPSTREAM_ANALYSIS.md  CI_CD_SETUP.md  DEPLOYMENT_RAG_DEFENSE.md  INDEX.md  LLM_FUTURE_EXTRAPOLATION.md  OPEN_SOURCE_STRATEGY.md  OPERATIONS_RAG_DEFENSE.md  POISONING_DETECTION_ARCHITECTURE.md  POISONING_DETECTION_RECOMMENDATION.md  RAG_DEFENSE_DEPLOYMENT_SUMMARY.md  RAG_DEFENSE_INDEX.md  README_POISONING_DETECTION.md  RESEARCH_SOURCES.md  SECURITY_RESEARCH_SUMMARY.md  agents.md  api-reference.md  architecture.md  cli.md  configuration.md  grok_reviews_2026_05_01.md  grok_test_coverage_review.md  observability-coverage.md  observability.md  p1c_extraction_detector.md  rag_poisoning_detection.md  routing.md  security.md  tools.md
evals/: routing_holdout.yaml  smoke.yaml
homebrew-beigebox/: README.md
hooks/: filter_synthetic.py  prompt_injection.py  rag_context.py  webhook_emitter.py
html_beigebox/: index.html
plugins/: README.md  dice.py  doc_parser.py  repo_tool.py  units.py  wiretap_summary.py  zip_inspector.py
scripts/: calibrate_embedding_baseline.py  check_workflows.sh  claude-sandbox.sh  export_conversations.py  ingest_to_chroma.py  install-hooks.sh  jira_ingest_run.py  migrate_chromadb_to_postgres.py  migrate_open_webui.py  ryans_cases_analysis.py  ryans_cases_analyze.py  ryans_cases_final.py  ryans_cases_final_b.py  ryans_cases_parallels.py  ryans_cases_rerun.py  search_conversations.py  security-scan.sh  sf_ingest_run.py  slack_ingest.py  sync-to-shipping.sh  tune_thresholds.py  verify_distributions.sh
tests/: TEST_STRATEGY.md  __init__.py  conftest.py  test_admin_api_probe.py  test_agentic_scorer.py  test_agentic_tool_prompting.py  test_aliases.py  test_allowlist_loader.py  test_anomaly_detector_router.py  test_api_anomaly_detector.py  test_api_key_repo.py  test_auth.py  test_backend_failure_modes.py  (+97 more)
(+486 files in other folders)
