[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beigebox"
version = "1.9"
description = "Tap the line. Control the carrier."
readme = "README.md"
license = {text = "AGPL-3.0 (see LICENSE.md and COMMERCIAL_LICENSE.md for dual-license options)"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.26",  # CVE-2026-40347 fixed in 0.0.26
    "bcrypt>=4.0.0",
    "beigebox-security>=0.1.0-beta",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["beigebox*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
security = [
    "bandit>=1.7.0",
    "semgrep>=1.50.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
beigebox = "beigebox.cli:main"

[tool.pytest.ini_options]
markers = [
    "unit: fast unit tests",
    "integration: component integration tests",
    "e2e: end-to-end flow tests",
    "error: error scenario tests",
    "slow: slow tests (>1s)",
    "acceptance: acceptance criteria tests",
]
